--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,16 @@ version: "3"
 
 services:
   rstudio:
-    build: 
+    build:
       context: ./docker/
       dockerfile: Dockerfile
-    image: nujabec/myrocker:20241018
+    image: nujabec/myrocker:20250917
+    env_file: ./docker/.env
     ports:
-      - "50001:8787"
+      - "50003:8787"
     volumes:
       - ../srv/:/home/rstudio/srv/
-      - renv:/home/rstudio/.cache/R/renv
+      - samba-mpd:/home/rstudio/mpd/
     environment:
       PASSWORD: rs
       ROOT: "TRUE"
@@ -18,14 +19,10 @@ services:
     tty: true
     stdin_open: true
     restart: always
-    networks:
-      - pgnetwork
 
 volumes:
-  renv:
-    external: true
-
-networks:
-    pgnetwork:
-      external: true
-
+  samba-mpd:
+    driver_opts:
+      type: cifs
+      o: username=mpd,password=mpd,domain=WORKGROUP,rw,uid=1000,gid=1000,file_mode=0777,dir_mode=0777
+      device: //200.200.17.40/mpd
